# guest-users

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cleanup-daemon/: Cargo.toml
cleanup-daemon/deb-services/: service
cleanup-daemon/src/: main.rs
guest-users-lib/: Cargo.toml  diesel.toml
guest-users-lib/deb-maintainer-scripts/: postinst
guest-users-lib/deb-raw/etc/apparmor.d/abstractions/authentication.d/: guest-users
guest-users-lib/deb-raw/etc/apparmor.d/cups-client.d/: guest-users
guest-users-lib/migrations/2022-06-20-115725_create_users/: down.sql  up.sql
guest-users-lib/migrations/2022-07-13-114257_boot_id/: down.sql  up.sql
guest-users-lib/migrations/2024-10-02-113721_bigint_keys/: down.sql  up.sql
guest-users-lib/src/: db.rs  helper.rs  lib.rs
guest-users-lib/src/db/: .gitignore  models.rs
guest-users-lib/src/zbus/: accounts_service.rs  login_manager.rs  mod.rs
guest-warning/: Cargo.toml
guest-warning/deb-maintainer-scripts/: postinst  prerm
guest-warning/deb-services/: guest-users-guest-warning.service
guest-warning/src/: main.rs
nss/: Cargo.toml
nss/deb-maintainer-scripts/: postinst  prerm
nss/src/: gecos.rs  group.rs  lib.rs  passwd.rs  shadow.rs
pam/: Cargo.toml
pam/deb-maintainer-scripts/: postinst  prerm
pam/deb-raw/usr/share/pam-configs/: guest-users
pam/src/: handler.rs  helper.rs  lib.rs
snap-tricks/: Cargo.toml  README.md
snap-tricks/deb-maintainer-scripts/: postinst  prerm
snap-tricks/src/: main.rs
sync-accountsservice/: Cargo.toml
sync-accountsservice/deb-services/: service
sync-accountsservice/src/: main.rs
