[workspace]
members = ["guest-users-lib", "pam", "nss", "sync-accountsservice", "guest-warning", "snap-tricks"]

[profile.release]
# Add some settings for shrinking the binary size significantly for release builds
# see https://github.com/johnthagen/min-sized-rust for more inspiration
strip = true
lto = true
