[package]
name = "guest-users-cleanup-daemon"
version = "0.0.0-dev"
authors = ["Leonard Marschke <leo@mixxplorer.de>"]
edition = "2018"
description = "Guest users support, user home directory cleanup daemon"
license = "MIT"


[package.metadata.deb]
maintainer = "Leonard Marschke <leo@mixxplorer.de>"
copyright = "2024, Leonard Marschke <leo@mixxplorer.de>"
license-file = ["../LICENSE", "2"]
extended-description = """Guest user support, sync users to accounts service\
Bringing guest users onto your machine.

With this module, guest user home directories get automatically cleaned up once they are not needed any more."""
depends = "guest-users"
maintainer-scripts = "deb-maintainer-scripts"
suggests = "guest-users-pam, guest-users-nss"
section = "utility"
priority = "optional"
assets = [
    ["target/release/guest-users-cleanup-daemon", "usr/bin/guest-users-cleanup-daemon", "755"],
]
systemd-units = { unit-scripts = "deb-services", enable = true }

[dependencies]
guest-users-lib = { path="../guest-users-lib" }
anyhow = "~1.0.98"
clap = { version = "~4.5.40", features = ["derive"] }
clap-verbosity-flag = "~3.0.3"
log = "~0.4.27"
simple_logger = "~5.0.0"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-stream = "0.1"
zbus = { version = "~5.8.0", features = ["tokio"] }
