[package]
name = "guest-users-nss"
version = "0.0.0-dev"
authors = ["Leonard Marschke <leo@mixxplorer.de>"]
edition = "2018"
description = "Guest users support, NSS module"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "guest_users_nss"
crate-type = ["cdylib"]

[package.metadata.deb]
maintainer = "Leonard Marschke <leo@mixxplorer.de>"
copyright = "2023, Leonard Marschke <leo@mixxplorer.de>"
license-file = ["../LICENSE", "2"]
extended-description = """Guest users support, NSS module\
Bringing guest users onto your machine.

With this module, you can make use of a specific guest users db for listing users and groups."""
depends = "guest-users"
maintainer-scripts = "deb-maintainer-scripts"
suggests = "guest-users-pam"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libguest_users_nss.so", "lib/libnss_guest_users.so.2", "755"],
]

[dependencies]
guest-users-lib = { path="../guest-users-lib" }
anyhow = "~1.0.81"
config = "~0.14.0"
lazy_static = "~1.4.0"
libc = "^0.2.153"
libnss = "^0.6.0"
log = "~0.4.21"
paste = "~1.0.14"
simple_logger = "~4.3.3"
