[package]
name = "guest-users-snap-tricks"
version = "0.0.0-dev"
authors = ["Leonard Marschke <leo@mixxplorer.de>"]
edition = "2018"
description = "Guest users support, snap tricks"
license = "MIT"


[package.metadata.deb]
maintainer = "Leonard Marschke <leo@mixxplorer.de>"
copyright = "2024, Leonard Marschke <leo@mixxplorer.de>"
license-file = ["../LICENSE", "2"]
extended-description = """Guest user support, sync users to accounts service\
Bringing guest users onto your machine.

With this module, you can automatically configure snap so guest users will be able to use snap apps."""
depends = "guest-users, snapd"
maintainer-scripts = "deb-maintainer-scripts"
section = "utility"
priority = "optional"
assets = [
    ["target/release/guest-users-snap-tricks", "usr/bin/guest-users-snap-tricks", "755"],
]

[dependencies]
guest-users-lib = { path="../guest-users-lib" }
anyhow = "~1.0.94"
clap = { version = "~4.5.23", features = ["derive"] }
clap-verbosity-flag = "~3.0.2"
log = "~0.4.22"
simple_logger = "~5.0.0"
